fix:循序多重权限过权
